fix: toggle advanced mode button on Safari width now fills space

--- a/source/assets/styles/sections/onboarding.scss
+++ b/source/assets/styles/sections/onboarding.scss
@@ -434,6 +434,8 @@ label[for="button-quartet"],
 		grid-area:label;
 		margin-left: var(--pad);
 		margin-right: var(--pad);
+		box-sizing: border-box;
+		width: calc(100% - 2 * var(--pad));
 	}
 	
 	#advanced-mode-feedback p{
